2007-11-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py: refer to Config values via Config.get()
	* src/gen/lib/test/date_test.py: set Config values before testing

2007-11-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Config/_GrampsGconfKeys.py: fixed changes in gconf interface

2007-11-25  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/test/date_test.py: turned each test into a case

2007-11-24 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsWidgets.py: ObjEntry, PlaceEntry and NoteEntry inherit from it.

2007-11-24  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py: had to import calendar by path.name
	  (so that the import of date_test would work)
	* src/gen/lib/test: new test directory
	* src/gen/lib/test/date_test.py: unittests for date.py

2007-11-24 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditPerson.py: callback family update bug removed

2007-11-24  Jerome Rapinat <romjerome@yahoo.fr>
	* src/DataViews/_PersonView.py: TransUtils issue with gettext context 
        * src/glade/gramps.glade: Inconsistent label in "Associations", issue #1390
        * src/TipOfDay.py: display bold tags, issue #1368
        * src/plugins/rel_fr.py: improve siblings relations

2007-11-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/rel_nl.py: new half sibling types
	* src/plugins/rel_it.py: new half sibling types
	* src/Relationship.py: change the sibling type to distinguish
	side of relation. Correct bug in sibling type determination.

2007-11-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_RelationView.py: tooltip cleanup, see also #256

2007-11-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: remove unnecessary import
	* src/plugins/siblings.py: add sibling relation if not normal
	* src/Relationship.py: improve sibling type calculation
	Issue #1323
